--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,7 @@
 
 #Folders
 .metadata/
-InteragindoComOSistema/
-PrimeiroProgramaJava/
-PrimeiroProgramaSwing/
-ProgramaFX/
+Ignore/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
